--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
 VUE_APP_APIURL=http://api.secureex.loc/api/
-VUE_APP_IMGURL=http://api.secureex.loc/
+VUE_APP_IMGURL=http://api.secureex.loc/storage/avatars/
