--- a/backend/package.json
+++ b/backend/package.json
@@ -8,5 +8,10 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "mysql2": "^3.2.4",
+        "uuid": "^9.0.0",
+        "ws": "^8.13.0"
     }
 }
