--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 VUE_APP_APIURL=http://api.secureex.loc/api/
 VUE_APP_IMGURL=http://api.secureex.loc/storage/avatars/
+VUE_APP_WS=ws://localhost:8080
