--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-VUE_APP_APIURL=http://api.secureex.loc/api/
-VUE_APP_IMGURL=http://api.secureex.loc/storage/avatars/
+VUE_APP_APIURL=http://api.shadownet.loc/api/
+VUE_APP_IMGURL=http://api.shadownet.loc/storage/avatars/
 VUE_APP_WS=ws://localhost:8080
