--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "dotenv": "^16.1.4",
         "moment": "^2.29.4",
         "mysql2": "^3.2.4",
         "uuid": "^9.0.0",
