improved file download

--- a/frontend/example.env
+++ b/frontend/example.env
@@ -1,3 +1,4 @@
 VUE_APP_APIURL=http://api.shadownet.loc/api/
 VUE_APP_IMGURL=http://api.shadownet.loc/storage/avatars/
 VUE_APP_WS=ws://localhost:8080
+VUE_APP_FILES=http://api.shadownet.loc/store/files?file=
